--- a/Node/package.json
+++ b/Node/package.json
@@ -4,13 +4,15 @@
   "description": "Sistema de Gestion de Autos",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "palala": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mssql": "^9.1.1"
-  }
+  },
+  "type": "module"
 }
