--- a/Node/.env
+++ b/Node/.env
@@ -1,6 +1,6 @@
-DB_USER=PF-GestionAutos
-DB_PASSWORD=PF-GestionAutos
-DB_SERVER=A-PHZ2-CIDI-005
+DB_USER=GestionAutos
+DB_PASSWORD=GestionAutos
+DB_SERVER=A-PHZ2-CIDI-028
 DB_NAME=PF-GestionAutos
 DB_TABLA_AUTO=Auto
 DB_TABLA_UBICACION=Ubicacion
