--- a/Node/.env
+++ b/Node/.env
@@ -1,6 +1,6 @@
 DB_USER=GestionAutos
 DB_PASSWORD=GestionAutos
-DB_SERVER=A-PHZ2-CIDI-054
+DB_SERVER=DESKTOP-O63256U\SQLEXPRESS
 
 DB_NAME=PF-GestionAutos
 DB_TABLA_AUTO=Auto
