--- a/Node/.env
+++ b/Node/.env
@@ -1,10 +1,11 @@
 DB_USER=GestionAutos
 DB_PASSWORD=GestionAutos
-DB_SERVER=DESKTOP-O63256U\SQLEXPRESS
+DB_SERVER=A-PHZ2-CIDI-032
 
 DB_NAME=PF-GestionAutos
 DB_TABLA_AUTO=Auto
 DB_TABLA_UBICACION=Ubicacion
+DB_TABLA_CONTRATO
 
 AUTH_HS256_KEY=Palala
 AUTH_ISSUER_URL=https://www.palala.io
