siguiendo con el node

--- a/Node/.env
+++ b/Node/.env
@@ -5,7 +5,9 @@ DB_SERVER=A-PHZ2-CIDI-032
 DB_NAME=PF-GestionAutos
 DB_TABLA_AUTO=Auto
 DB_TABLA_UBICACION=Ubicacion
-DB_TABLA_CONTRATO
+DB_TABLA_CONTRATO=Contrato
+
+DB_TABLA_CLIENTE=Cliente
 
 AUTH_HS256_KEY=Palala
 AUTH_ISSUER_URL=https://www.palala.io
