--- a/Node/.env
+++ b/Node/.env
@@ -1,15 +1,15 @@
 DB_USER=GestionAutos
 DB_PASSWORD=GestionAutos
-DB_SERVER=A-PHZ2-CIDI-030
+DB_SERVER=A-PHZ2-CIDI-004
 
 DB_NAME=PF-GestionAutos
 DB_TABLA_AUTO=Auto
 DB_TABLA_UBICACION=Ubicacion
 DB_TABLA_CONTRATO=Contrato
 
-DB_TABLA_CLIENTE=Cliente;
+DB_TABLA_CLIENTE=Cliente
 
-DB_TABLA_DAÑOS=Daños;
+DB_TABLA_DAÑOS=Daños
 
 AUTH_HS256_KEY=Palala
 AUTH_ISSUER_URL=https://www.palala.io
