--- a/Node/.env
+++ b/Node/.env
@@ -9,7 +9,7 @@ DB_TABLA_CONTRATO=Contrato
 
 DB_TABLA_CLIENTE=Cliente
 
-DB_TABLA_DAÑOS=Daños
+DB_TABLA_DANOS=Daños
 
 AUTH_HS256_KEY=Palala
 AUTH_ISSUER_URL=https://www.palala.io
